tests/rosetta/transpiler/Swift/bernoulli-numbers.error
exit status 1
/tmp/TestSwiftTranspiler_Rosetta_Golden1502342539/001/main.swift:37:9: error: cannot find 'num' in scope
35 | for i in 0..<61 {
36 |     let b = Double(bernoulli(Int(i)))
37 |     if (num(b) != 0) {
   |         `- error: cannot find 'num' in scope
38 |         let numStr = _p(num(b))
39 |         let denStr = _p(denom(b))

/tmp/TestSwiftTranspiler_Rosetta_Golden1502342539/001/main.swift:38:25: error: cannot find 'num' in scope
36 |     let b = Double(bernoulli(Int(i)))
37 |     if (num(b) != 0) {
38 |         let numStr = _p(num(b))
   |                         `- error: cannot find 'num' in scope
39 |         let denStr = _p(denom(b))
40 |         print(_p(((((("B(" + String(describing: _padStart(_p(i), 2, " "))) + ") =") + String(describing: _padStart(numStr, 45, " "))) + "/") + denStr)))

/tmp/TestSwiftTranspiler_Rosetta_Golden1502342539/001/main.swift:39:25: error: cannot find 'denom' in scope
37 |     if (num(b) != 0) {
38 |         let numStr = _p(num(b))
39 |         let denStr = _p(denom(b))
   |                         `- error: cannot find 'denom' in scope
40 |         print(_p(((((("B(" + String(describing: _padStart(_p(i), 2, " "))) + ") =") + String(describing: _padStart(numStr, 45, " "))) + "/") + denStr)))
41 |     }

/tmp/TestSwiftTranspiler_Rosetta_Golden1502342539/001/main.swift:18:60: warning: forced cast from '[Double]' to '[Any]' always succeeds; did you mean to use 'as'?
16 |     var m: Int = 0
17 |     while (m <= n) {
18 |         a = ((((a + [(1 / Double((m + 1)))]) as! [Double]) as! [Any]) as! [Double])
   |                                                            `- warning: forced cast from '[Double]' to '[Any]' always succeeds; did you mean to use 'as'?
19 |         var j: Int = m
20 |         while (j >= 1) {
